# Athena-sitios-historicos

./: README.md
admin/: .env.example  Procfile  main.py  pyproject.toml
admin/src/core/: permissions_service.py  review_service.py  seeds.py
admin/src/core/models/: site.py
admin/src/web/: __init__.py  config.py  storage.py
admin/src/web/api/: minio.py  sites_provinces.py
admin/src/web/controllers/: sites_routes.py  user_routes.py
admin/src/web/templates/: base.html  base_layout.html  edit_site.html  home.html  index.html  list.html  login.html  new_site.html  reviews.html  site_detail.html  sites_list.html  tags.html
admin/static/css/: style.css
portal/: .env.production  index.html
portal/src/: App.vue  main.js
portal/src/components/: BackButton.vue  FeaturedSection.vue  FiltersSite.vue  SiteCard.vue
portal/src/stores/: auth.js
portal/src/views/: DetalleSitio.vue  FavoritosView.vue  HomeView.vue  ListadoSitios.vue  PerfilView.vue  ResenasView.vue
