[tool.poetry]
name = "code"
version = "0.1.0"
description = ""
authors = ["Valentina Godoy <vgodoy.info@gmail.com>"]
readme = "README.md"
packages = [
    { include = "core", from = "src" },
    { include = "web", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10,<4"
flask = ">=3.1.2,<4.0.0"
sqlalchemy = ">=2.0.43,<3.0.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
flask-sqlalchemy = "^3.1.1"
flask-session = "^0.8.0"
bcrypt = "^5.0.0"
geoalchemy = "^0.7.2"
shapely = "^2.1.2"
geoalchemy2 = "^0.18.0"
boto3 = "^1.34.0"
gunicorn = "^22.0.0"
flask-cors = "^4.0.0"
flask-wtf = "^1.2.2"
flask-jwt-extended = "^4.7.1"
marshmallow = "^4.1.0"

[[tool.poetry.source]]
name = "pypi-http"
url = "http://pypi.python.org/simple/"
priority = "supplemental"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
flake8 = "^6.0"
black = "^24.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.0"
flake8 = "^6.0"
black = "^24.0"